<resources>
    <string name="app_name">Unit Conversion</string>
    <string name="conversion_type">Conversion Type</string>
    <string name="to">To:</string>
    <string name="_0_0">0.0</string>
    <string name="convert">Convert</string>
    <string name="from">From:</string>

    <string-array name="conversion_types">
        <item>Length</item>
        <item>Weight</item>
        <item>Temperature</item>
    </string-array>

    <string-array name="length_units">
        <item>Inch</item>
        <item>Foot</item>
        <item>Yard</item>
        <item>Mile</item>
        <item>Centimeter</item>
        <item>Kilometer</item>
    </string-array>

    <string-array name="weight_units">
        <item>Pound</item>
        <item>Ounce</item>
        <item>KG</item>
        <item>Ton</item>
    </string-array>

    <string-array name="temperature_units">
        <item>Celsius</item>
        <item>Fahrenheit</item>
        <item>Kelvin</item>
    </string-array>
</resources>