<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.appbar.AppBarLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true">

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:fitsSystemWindows="true">

        <com.google.android.material.appbar.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:titleEnabled="false">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                app:layout_collapseMode="pin"/>

        </com.google.android.material.appbar.CollapsingToolbarLayout>

        <androidx.core.widget.NestedScrollView
            android:id="@+id/nested_scrollview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:padding="10dp"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/typetextview"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/conversion_type"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Spinner
                    android:id="@+id/typespinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:minHeight="48dp"
                    android:background="@drawable/border"
                    app:layout_constraintEnd_toEndOf="@id/typetextview"
                    app:layout_constraintStart_toStartOf="@id/typetextview"
                    app:layout_constraintTop_toBottomOf="@id/typetextview"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/fromtextview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/from"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/typespinner"/>

                <Spinner
                    android:id="@+id/fromspinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="@id/fromtextview"
                    app:layout_constraintStart_toStartOf="@id/fromtextview"
                    app:layout_constraintTop_toBottomOf="@id/fromtextview"
                    android:background="@drawable/border"
                    tools:ignore="SpeakableTextPresentCheck" />

                <TextView
                    android:id="@+id/to_textview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/to"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/fromspinner"/>

                <Spinner
                    android:id="@+id/toSpinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:minHeight="48dp"
                    app:layout_constraintEnd_toEndOf="@id/to_textview"
                    app:layout_constraintStart_toStartOf="@id/to_textview"
                    app:layout_constraintTop_toBottomOf="@id/to_textview"
                    android:background="@drawable/border"
                    tools:ignore="SpeakableTextPresentCheck" />

                <EditText
                    android:id="@+id/valueEditText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/_0_0"
                    android:inputType="numberDecimal"
                    android:minHeight="48dp"
                    android:textAlignment="center"
                    android:maxLength="8"
                    android:textColorHint="#757575"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/toSpinner"
                    tools:ignore="DuplicateSpeakableTextCheck"
                    android:autofillHints="" />
                <Button
                    android:id="@+id/convertButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="15dp"
                    android:text="@string/convert"
                    app:layout_constraintTop_toBottomOf="@id/valueEditText"/>

                <TextView
                    android:id="@+id/resultView"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="16dp"
                    android:background="@drawable/border"
                    android:hint="@string/_0_0"
                    android:textAlignment="center"
                    app:flow_verticalAlign="center"
                    app:flow_horizontalAlign="center"
                    android:textColorHint="#757575"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/convertButton" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</com.google.android.material.appbar.AppBarLayout>